--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,9 @@ dependencies = [
     "pydantic (>=2.12.5,<3.0.0)",
     "httpx (>=0.28.1,<0.29.0)",
     "python-dotenv (>=1.2.1,<2.0.0)",
-    "logging (>=0.4.9.6,<0.5.0.0)"
+    "logging (>=0.4.9.6,<0.5.0.0)",
+    "alembic (>=1.18.1,<2.0.0)",
+    "psycopg2-binary (>=2.9.11,<3.0.0)"
 ]
 
 
