--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,8 @@ dependencies = [
     "logging (>=0.4.9.6,<0.5.0.0)",
     "alembic (>=1.18.1,<2.0.0)",
     "psycopg2-binary (>=2.9.11,<3.0.0)",
-    "croniter (>=6.0.0,<7.0.0)"
+    "croniter (>=6.0.0,<7.0.0)",
+    "pandas (>=2.3.3,<3.0.0)"
 ]
 
 
