--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.14"
 dependencies = [
-    "fastapi[uvicorn] (>=0.128.0,<0.129.0)",
+    "fastapi[standard] (>=0.128.0,<0.129.0)",
     "sqlalchemy (>=2.0.45,<3.0.0)",
     "pydantic (>=2.12.5,<3.0.0)",
     "httpx (>=0.28.1,<0.29.0)",
@@ -17,7 +17,8 @@ dependencies = [
     "alembic (>=1.18.1,<2.0.0)",
     "psycopg2-binary (>=2.9.11,<3.0.0)",
     "croniter (>=6.0.0,<7.0.0)",
-    "pandas (>=2.3.3,<3.0.0)"
+    "pandas (>=2.3.3,<3.0.0)",
+    "sqlmodel (>=0.0.31,<0.0.32)"
 ]
 
 
