--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,9 @@ dependencies = [
     "sqlmodel (>=0.0.31,<0.0.32)"
 ]
 
+[tool.poetry]
+packages = [{ include = "api", from = "src" }, { include = "fetcher", from = "src" }]
+
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
