fix: logs rusticos adicionados e correção de path dos imports

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,9 @@ dependencies = [
     "psycopg2-binary (>=2.9.11,<3.0.0)",
     "croniter (>=6.0.0,<7.0.0)",
     "pandas (>=2.3.3,<3.0.0)",
-    "sqlmodel (>=0.0.31,<0.0.32)"
+    "sqlmodel (>=0.0.31,<0.0.32)",
+    "psycopg2 (>=2.9.11,<3.0.0)",
+    "tqdm (>=4.67.1,<5.0.0)"
 ]
 
 [tool.poetry]
