--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = [
     {name = "Marcos Pereira",email = "129459113+mpaulo315@users.noreply.github.com"}
 ]
 readme = "README.md"
-requires-python = ">=3.14"
+requires-python = ">=3.12,<3.14"
 dependencies = [
     "fastapi[standard] (>=0.128.0,<0.129.0)",
     "sqlalchemy (>=2.0.45,<3.0.0)",
